# PaywallFetcher

./: .gitignore  AGENTS.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  TOOLS.md  auth_utils.py  config.debug-cookies.example.json  config.example.json  downloader.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
qa/: README.md  qa_downloader.py  qa_unlock.py
skills/: README.md
skills/site-content-downloader/: SKILL.md
src/paywallfetcher/: __init__.py  __main__.py  articles.py  auth.py  cli.py  config.py  errors.py  output.py  qa.py  state.py  unlock.py
src/paywallfetcher/sites/: __init__.py  base.py  generic.py
tests/: test_auth_env.py  test_cli.py  test_config.py  test_generic_adapter.py  test_imports.py  test_state.py
tests/fixtures/: article_list_payload.json  qa_list_payload.json
workspace-template/: AGENTS.md  TOOLS.md
